# eikon-docker

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: renovate.json
.github/workflows/: ci.yml  hadolint.yml  pre-commit.yml  release.yml  test.yml  test_image.yml
docker/: .dockerignore  Dockerfile
eikon/: Profile.py  __init__.py  data_grid.py  eikonError.py  json_requests.py  news_request.py  symbology.py  time_series.py  tools.py
eikon/streaming_session/: __init__.py  cache.py  desktop_session.py  istream_callback.py  itemstream.py  session.py  stream.py  stream_connection.py  streaming_connection_config.py  streamingprice.py  streamingprice_callback.py  streamingprices.py
test/: config.py  requirements.txt  test_api.py  test_data_grid.py  test_tools.py
tests/: requirements.txt  test_data_grid.py  test_tools.py
