[project]
name = "eikon-docker"
version = "0.0.0"
description = "eikon"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eikon>=1.1.18"
]

[project.urls]
repository = "https://github.com/tschm/eikon-docker"

[project.optional-dependencies]
dev = [
    "pytest-cov==6.0.0",
    "pytest==8.3.5",
    "pre-commit==4.2.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eikon"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
